--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         # Don't add module configuration files, you will get errors.
         recipe:
           - xfce-38-1.yml
-          - xfce-39-1.yml
+        #  - xfce-39-1.yml
 # !!!
 
     steps:
