--- a/config/gnome-39-1.yml
+++ b/config/gnome-39-1.yml
@@ -27,7 +27,8 @@ modules:
     - virt-manager
     - virt-viewer
     - gparted
-    
+    - mint-y-icons
+    - mint-y-theme
     - wavemon
     - neofetch
     
