--- a/config/xfce-38-1.yml
+++ b/config/xfce-38-1.yml
@@ -39,6 +39,8 @@ modules:
     - xfce4-weather-plugin
     - lightdm-autologin-greeter
     - lightdm-gtk-greeter-settings
+    - thunar-media-tags-plugin
+    - thunar-megasync
       # - micro
       # - starship
     remove:
