--- a/config/mikexfce.yml
+++ b/config/mikexfce.yml
@@ -38,6 +38,7 @@ modules:
     - xfce4-weather-plugin
     - lightdm-autologin-greeter
     - lightdm-gtk-greeter-settings
+    - thunar-media-tags-plugin
       # - micro
       # - starship
     remove:
