--- a/config/gnome-39-1.yml
+++ b/config/gnome-39-1.yml
@@ -31,13 +31,17 @@ modules:
     - mint-y-theme
     - wavemon
     - neofetch
+    - nemo-fileroller
+    - nemo-image-converter
+    - nemo-audio-tab
     
-      # - micro
-      # - starship
+      
     remove:
       #- firefox # default firefox removed in favor of flatpak
       #- firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
       - nvtop
+      - nautilus
+      - nautilus-extensions
 
   - type: bling # configure what to pull in from ublue-os/bling
     install:
