--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           - gnome-39-1.yml
           - mikexfce.yml
           - mikegnome.yml
+          - mikexfce-37.yml
           
 # !!!
 
