--- a/config/mikexfce.yml
+++ b/config/mikexfce.yml
@@ -39,8 +39,8 @@ modules:
     - lightdm-autologin-greeter
     - lightdm-gtk-greeter-settings
     - thunar-media-tags-plugin
-    #- simple-scan
-    #- hplip-gui
+    - simple-scan
+    - hplip-gui
       # - micro
       # - starship
     remove:
@@ -51,7 +51,7 @@ modules:
   - type: bling # configure what to pull in from ublue-os/bling
     install:
       - fonts # selection of common good free fonts
-      #- justfiles # add "!include /usr/share/ublue-os/just/bling.just"
+      - justfiles # add "!include /usr/share/ublue-os/just/bling.just"
                   # in your custom.just (added by default) or local justfile
       #- nix-installer # shell shortcuts for determinate system's nix installers
       - ublue-os-wallpapers
