--- a/config/mikexfce.yml
+++ b/config/mikexfce.yml
@@ -41,6 +41,7 @@ modules:
     - thunar-media-tags-plugin
     - simple-scan
     - hplip-gui
+    - xinput
       # - micro
       # - starship
     remove:
