--- a/config/mikegnome-39-1.yml
+++ b/config/mikegnome-39-1.yml
@@ -28,6 +28,7 @@ modules:
     - Thunar
     - thunar-media-tags-plugin
     - gnome-boxes
+    - gnome-logs
     - xdotool
     - libadwaita
     - neofetch
