--- a/config/mikegnome-38-1 .yml
+++ b/config/mikegnome-38-1 .yml
@@ -1,11 +1,11 @@
 # image will be published to ghcr.io/<user>/<name>
-name: mikexfce-37-1
+name: mikegnome-38-1
 # description will be included in the image's metadata
 description: My customised xfce image includes a few packages - mainly VM stuff
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/vauxite-main
-image-version: 37 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/silverblue-main
+image-version: 38 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -24,23 +24,20 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-    - gnome-boxes
     - backintime-qt
-    - gparted
-    - gnome-disk-utility
+    - Thunar
+    - thunar-media-tags-plugin
+    - gnome-boxes
     - gnome-logs
     - xdotool
-    - wavemon
+    - libadwaita
     - neofetch
-    - xfce4-docklike-plugin
-    - xfce4-genmon-plugin
-    - xfce4-whiskermenu-plugin
-    - xfce4-weather-plugin
-    - lightdm-autologin-greeter
-    - lightdm-gtk-greeter-settings
-    - thunar-media-tags-plugin
+    - gparted
     - simple-scan
     - hplip-gui
+    - xinput
+    #- simple-scan
+    #- hplip-gui
       # - micro
       # - starship
     remove:
