--- a/config/gnome-39-1.yml
+++ b/config/gnome-39-1.yml
@@ -36,7 +36,8 @@ modules:
     - nemo-fileroller
     - nemo-image-converter
     - nemo-audio-tab
-    
+    - gnome-shell-extension-dash-to-panel
+    - gnome-shell-extension-appindicator
       
     remove:
       #- firefox # default firefox removed in favor of flatpak
