--- a/config/gnome-39-1.yml
+++ b/config/gnome-39-1.yml
@@ -36,8 +36,7 @@ modules:
     - nemo-fileroller
     - nemo-image-converter
     - nemo-audio-tab
-    - gnome-shell-extension-dash-to-panel
-    - gnome-shell-extension-appindicator
+   
       
     remove:
       #- firefox # default firefox removed in favor of flatpak
@@ -46,6 +45,13 @@ modules:
       - nautilus
       - gnome-classic-session
       - gnome-terminal-nautilus
+      - gnome-classic-session
+      - gnome-terminal-nautilus
+      - gnome-shell-extension-apps-menu
+      - gnome-shell-extension-background-logo
+      - gnome-shell-extension-launch-new-instance
+      - gnome-shell-extension-places-menu
+      - gnome-shell-extension-window-list
       
 
   - type: bling # configure what to pull in from ublue-os/bling
