--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,15 +39,15 @@ jobs:
         # Add recipes for all the images you want to build here.
         # Don't add module configuration files, you will get errors.
         recipe:
-          - xfce-38-1.yml
+        # - xfce-38-1.yml
           - xfce-39-1.yml
-          - gnome-38-1.yml
+        # - gnome-38-1.yml
           - gnome-39-1.yml
           - mikexfce-38-1.yml
           - mikegnome-38-1.yml
           - mikegnome-39-1.yml
         # - mikexfce-37.yml
-        # - kinoite-39-1.yml
+          - kinoite-39-1.yml
           
 # !!!
 
