--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -2,5 +2,5 @@ ublue_variants:
   - label: kkb301/images
     ks: /kickstart/ublue-os.ks
     flavors:
-      - label: mikexfce-38-1
-      - label: xfce-38-1
+      - label: mikegnome-39-1
+      - label: xfce-39-1
