--- a/config/xfce-39-1.yml
+++ b/config/xfce-39-1.yml
@@ -41,6 +41,7 @@ modules:
     - lightdm-autologin-greeter
     - lightdm-gtk-greeter-settings
     - thunar-media-tags-plugin
+    - keepassxc
      # - mullvad-vpn
       # - micro
       # - starship
