--- a/config/gnome-39-1.yml
+++ b/config/gnome-39-1.yml
@@ -22,7 +22,7 @@ modules:
 
   - type: rpm-ostree
     repos:
-    - https://repository.mullvad.net/rpm/stable/mullvad.repo
+    #- https://repository.mullvad.net/rpm/stable/mullvad.repo
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
     - virt-manager
@@ -38,7 +38,7 @@ modules:
     - nemo-image-converter
     - nemo-audio-tab
     - keepassxc
-    - mullvad-vpn
+    #- mullvad-vpn
    
       
     remove:
