--- a/config/kinoite-39-1.yml
+++ b/config/kinoite-39-1.yml
@@ -24,8 +24,8 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-    - virt-manager
-    - virt-viewer
+    #- virt-manager
+    #- virt-viewer
     # - wavemon
     - neofetch
 
