--- a/config/kinoite-39-1.yml
+++ b/config/kinoite-39-1.yml
@@ -24,10 +24,11 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-    #- virt-manager
-    #- virt-viewer
+     - virt-manager
+     - virt-viewer
     # - wavemon
     - neofetch
+    - keepassxc
 
    
       
@@ -44,7 +45,7 @@ modules:
       - justfiles # add "!include /usr/share/ublue-os/just/bling.just"
                   # in your custom.just (added by default) or local justfile
       #- nix-installer # shell shortcuts for determinate system's nix installers
-      - ublue-os-wallpapers
+      #- ublue-os-wallpapers
       # - ublue-update # https://github.com/ublue-os/ublue-update
       # - dconf-update-service # a service unit that updates the dconf db on boot
       # - devpod # https://devpod.sh/ as an rpm
