--- a/config/xfce-39-1.yml
+++ b/config/xfce-39-1.yml
@@ -22,7 +22,7 @@ modules:
 
   - type: rpm-ostree
     repos:
-     - https://repository.mullvad.net/rpm/stable/mullvad.repo
+     #- https://repository.mullvad.net/rpm/stable/mullvad.repo
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
     - virt-manager
@@ -42,7 +42,7 @@ modules:
     - lightdm-gtk-greeter-settings
     - thunar-media-tags-plugin
     - keepassxc
-    - mullvad-vpn
+    #- mullvad-vpn
       # - micro
       # - starship
     remove:
