--- a/config/xfce-39-1.yml
+++ b/config/xfce-39-1.yml
@@ -29,7 +29,7 @@ modules:
     - virt-viewer
     - keepassxc
     - backintime-qt
-    - gparted
+    # - gparted
     - gnome-disk-utility
     - gnome-terminal
     - gnome-logs
