--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,12 +41,12 @@ jobs:
         recipe:
         # - xfce-38-1.yml
           - xfce-39-1.yml
-        #  - onyx-39-1.yml
+        # - onyx-39-1.yml
           - gnome-39-1.yml
-        #  - mikexfce-38-1.yml
-        #  - mikegnome-38-1.yml
+        # - mikexfce-38-1.yml
+        # - mikegnome-38-1.yml
           - mikegnome-39-1.yml
-        # - mikexfce-37.yml
+          - mikexfce-39.yml
           - kinoite-39-1.yml
           
 # !!!
