--- a/config/mikegnome-40-1.yml
+++ b/config/mikegnome-40-1.yml
@@ -1,11 +1,11 @@
 # image will be published to ghcr.io/<user>/<name>
-name: xfce-39-1
+name: mikegnome-40-1
 # description will be included in the image's metadata
 description: My customised xfce image includes a few packages - mainly VM stuff
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/vauxite-main
-image-version: 39 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/silverblue-main
+image-version: 40 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -22,31 +22,24 @@ modules:
 
   - type: rpm-ostree
     repos:
-     #- https://repository.mullvad.net/rpm/stable/mullvad.repo
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-    - virt-manager
-    - virt-viewer
-    - keepassxc
-    # - backintime-qt
-    # - gparted
-    - gnome-disk-utility
-    - gnome-terminal
-    # - gnome-logs
-    - xdotool
-    - wavemon
-    - neofetch
-    - xfce4-docklike-plugin
-    - xfce4-genmon-plugin
-    - xfce4-whiskermenu-plugin
-    - lightdm-autologin-greeter
-    - lightdm-gtk-greeter-settings
+    - backintime-qt
+    - Thunar
     - thunar-media-tags-plugin
-    - firewall-config
-    - plank
-    #- mullvad-vpn
-      # - micro
-      # - starship
+    - gnome-boxes
+    - gnome-logs
+    - xdotool
+    - libadwaita
+    - neofetch
+    - gparted
+    - simple-scan
+    - hplip-gui
+    - xinput
+    - f36-backgrounds-gnome 
+    - f37-backgrounds-gnome
+    - f38-backgrounds-gnome 
+    - f39-backgrounds-extras-gnome
     remove:
       #- firefox # default firefox removed in favor of flatpak
       #- firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
