--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,16 +40,16 @@ jobs:
         # Don't add module configuration files, you will get errors.
         recipe:
           - xfce-39-1.yml
-        # - xfce-40-1.yml
+          - xfce-40-1.yml
         # - onyx-39-1.yml
           - gnome-39-1.yml
-        # - gnome-40-1.yml
+          - gnome-40-1.yml
         # - mikexfce-38-1.yml
         # - mikegnome-38-1.yml
           - mikegnome-39-1.yml
-        # - mikegnome-40-1.yml
-        #  - mikexfce-39-1.yml
-        #  - kinoite-39-1.yml
+          - mikegnome-40-1.yml
+        # - mikexfce-39-1.yml
+          - kinoite-40-1.yml
           
 # !!!!
 
