--- a/config/gnome-40-1.yml
+++ b/config/gnome-40-1.yml
@@ -46,9 +46,9 @@ modules:
       #- firefox # default firefox removed in favor of flatpak
       #- firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
       - nvtop
-      - nautilus
-      - gnome-classic-session
-      - gnome-terminal-nautilus
+      #- nautilus
+      #- gnome-classic-session
+      #- gnome-terminal-nautilus
       #- gnome-shell-extension-apps-menu
       #- gnome-shell-extension-background-logo
       #- gnome-shell-extension-launch-new-instance
